force-app/main/default/objects/ChildObject__c/fields/FormulaField__c.field-meta.xml
<CustomField>
    <fullName>FormulaField__c</fullName>
    <formula>MasterObject__r.NumberField__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Formula Field</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>