force-app/main/default/objects/ChildObject__c/fields/MasterObject__c.field-meta.xml
<CustomField>
    <fullName>MasterObject__c</fullName>
    <label>Master Object</label>
    <referenceTo>MasterObject__c</referenceTo>
    <relationshipLabel>Child Objects</relationshipLabel>
    <relationshipName>Child_Objects</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>