force-app/main/default/objects/ChildObject__c/fields/TextField__c.field-meta.xml
<CustomField>
    <fullName>TextField__c</fullName>
    <label>Text Field</label>
    <length>80</length>
    <type>Text</type>
</CustomField>